--- a/commitment/index.html
+++ b/commitment/index.html
@@ -9,5 +9,10 @@
     <h1>Testing my new setup</h1>
     <h1>Testing my new git</h1>
     <h1>Testing my new website</h1>
+    <h1>Testing my new setup</h1>
+    <h1>Testing my new git</h1>
+    <h1>Testing my new website</h1><h1>Testing my new setup</h1>
+    <h1>Testing my new git</h1>
+    <h1>Testing my new website</h1>
 </body>
 </html>
